# .config

./: .gitignore  README.md  alacritty.toml  alacritty.yml
dev_setup/: python.md
notes/: README.md  pyproject.toml
notes/notes/: main.py
notes/notes/templates/: daily_log.jinja.md  meeting.jinja.md
nvim/: init.lua  lazy-lock.json
tmux/: tmux.conf
zsh/: .zshrc
