[project]
name = "notes"
version = "0.1.0"
description = "scripts for running/creating notes"
authors = [
    {name = "willemmirkovich",email = "willemmirkovich@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
